# ocp

./: .gitignore  PLAN.md  README.md  config.toml  pyproject.toml
packaging/: ocpd.service
scripts/: canonical_session.sh  smoke.sh
src/ocp/: __init__.py  auth.py  cli.py  config.py  controller.py  daemon.py  duration.py  gpuspec.py  history.py  lease.py  logging_setup.py  paths.py
src/ocp/ipc/: client.py  protocol.py  server.py
src/ocp/monitor/: __init__.py  base.py  nvml.py
src/ocp/worker/: compute.py  main.py  manager.py  memory.py
tests/: test_auth.py  test_config.py  test_controller.py  test_duration.py  test_gpuspec.py  test_history.py  test_lease.py  test_protocol.py
