[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocp"
version = "0.1.0"
description = "Occupy Compute Process — a GPU placeholder daemon"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "typer>=0.12",
    "nvidia-ml-py>=12.560",
    "setproctitle>=1.3",
]

[project.optional-dependencies]
worker = ["torch>=2.6"]
test = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
ocp = "ocp.cli:app"
ocpd = "ocp.daemon:main"
ocp-worker = "ocp.worker.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
